--- a/Decofe2017/Web.config
+++ b/Decofe2017/Web.config
@@ -73,7 +73,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="DecofeContext" connectionString="Data Source=localhost;Initial Catalog=Decofe2017;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>-->
-    <add name="DecofeContext" connectionString="Data Source=52.0.152.153;Initial Catalog=Decofe2017;User Id=sa;Password=sql@amazo0n!2017=aaf2808quality" providerName="System.Data.SqlClient"/>
+    <add name="DecofeContext" connectionString="Data Source=localhost;Initial Catalog=Decofe2017;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>    
   </connectionStrings>
 </configuration>
